--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
     </div>
   </div>
 
-  <script src="scripts.js"></script>
+  <script type="module">
+    import { App } from './App.js';
+    document.addEventListener('DOMContentLoaded', () => {
+      new App();
+    });
+  </script>
 </body>
 </html>
